<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>Qrowntech_testing</groupId>
  <artifactId>Qrowntech_testing</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <build>
    <sourceDirectory>src</sourceDirectory>
    <testSourceDirectory>test</testSourceDirectory>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <release>17</release>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.0.0-M5</version>
        <configuration>
			 <argLine>--add-opens java.base/sun.nio.fs=ALL-UNNAMED</argLine>
			 <testFailureIgnore>false</testFailureIgnore> <!-- this must be false or omitted -->
			<properties>
				<configurationParameters>
					junit.jupiter.execution.parallel.enabled=true 
					junit.jupiter.execution.parallel.mode.default=concurrent
					junit.jupiter.execution.parallel.mode.classes.default=concurrent
					
					junit.jupiter.execution.parallel.config.strategy=dynamic 
					junit.jupiter.execution.parallel.config.dynamic.factor=0.5
				</configurationParameters>
			</properties>
			
          <includes>
            <include>**/*.java</include> 
          </includes>
          
          <!--<trimStackTrace>false</trimStackTrace>-->

        </configuration>
      </plugin>
    </plugins>
  </build>
  
  <dependencies>
   <dependency>
     <groupId>com.microsoft.playwright</groupId>
     <artifactId>playwright</artifactId>
     <version>1.51.0</version>
   </dependency>
   <dependency>
  	 <groupId>org.junit.jupiter</groupId>
     <artifactId>junit-jupiter-api</artifactId>
     <version>5.8.1</version>
     <scope>test</scope>
   </dependency>
   <dependency>
     <groupId>org.junit.jupiter</groupId>
     <artifactId>junit-jupiter-engine</artifactId>
     <version>5.8.1</version>
     <scope>test</scope>
   </dependency>
  </dependencies>
</project>